--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 			<section class="promo_sect">
 				
 				<div class="promo_desc">
+					<div class="white_tr"></div>
+					<div class="blue-tr"></div>
 					<div class="inner">
 						<h1>Автогамак<br />
 						Для Собак<br />
