--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="vendors/css/jquery.fancybox.css">
 	<link rel="icon" type="image/png" href="favicon/favicon.ico" sizes="16x16">
-<!-- 	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
 	<title>Автогамак</title>
 
 </head>
@@ -836,8 +835,8 @@
 	<script src="vendors/js/smoothscroll.js"></script>
 	<script src="vendors/js/jquery.fancybox.js"></script>
 	<script src="js/scripts.js"></script>
-	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-	<script src="js/map.js"></script>
+<!-- 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+	<script src="js/map.js"></script> -->
 
 	<!-- Popup -->
 
