--- a/index.html
+++ b/index.html
@@ -835,8 +835,8 @@
 	<script src="vendors/js/smoothscroll.js"></script>
 	<script src="vendors/js/jquery.fancybox.js"></script>
 	<script src="js/scripts.js"></script>
-<!-- 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-	<script src="js/map.js"></script> -->
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+	<script src="js/map.js"></script>
 
 	<!-- Popup -->
 
